[gd_scene load_steps=25 format=3 uid="uid://bg3a0cin8k5lq"]

[ext_resource type="PackedScene" uid="uid://c5jqm5klqmyqp" path="res://Shaders/effect_layer.tscn" id="1_di3j1"]
[ext_resource type="AudioStream" uid="uid://dvltovrs1dq3b" path="res://Music/Background_music.mp3" id="2_wb6i2"]
[ext_resource type="Script" path="res://Scripts/Menu/ExitHandler.gd" id="3_7upac"]
[ext_resource type="Script" path="res://Scripts/LevelScripts/Level8.gd" id="4_w7oml"]
[ext_resource type="PackedScene" uid="uid://cpmnlu2ecycaj" path="res://Objects/Gate.tscn" id="5_bqmtj"]
[ext_resource type="Texture2D" uid="uid://dek2lg53lpyc4" path="res://Graphics/GenericTileset.png" id="6_dgjx0"]
[ext_resource type="Texture2D" uid="uid://deqkgxpntioog" path="res://Graphics/Effects/Vignette.png" id="7_32ac3"]
[ext_resource type="Texture2D" uid="uid://2wp0uad4bge3" path="res://Graphics/MapTileset_visual.png" id="8_beea0"]
[ext_resource type="PackedScene" uid="uid://cuwgaeb2p8n0q" path="res://Sprites/Tentacles.tscn" id="9_wr2e0"]
[ext_resource type="SpriteFrames" uid="uid://caki7lkf224vc" path="res://Animation/Tentacles_sprite_frames.tres" id="10_q48c4"]
[ext_resource type="PackedScene" uid="uid://3lo42gyhsayd" path="res://Objects/Goat.tscn" id="11_7cpos"]
[ext_resource type="PackedScene" uid="uid://hdct1bg8ky3i" path="res://Sprites/Sign.tscn" id="12_r2xwt"]
[ext_resource type="Texture2D" uid="uid://yqa5vdxe8nqw" path="res://Graphics/Steel.png" id="13_xyuwl"]
[ext_resource type="Texture2D" uid="uid://ce31f7pl6e5t7" path="res://Graphics/Sulphur.png" id="15_gs6mq"]
[ext_resource type="Texture2D" uid="uid://ivj3p0f68ije" path="res://Graphics/Mercury.png" id="16_be75o"]
[ext_resource type="Texture2D" uid="uid://x7i12f50brul" path="res://Graphics/Lead.png" id="17_4djrm"]
[ext_resource type="PackedScene" uid="uid://b7is0s84nwqag" path="res://Objects/Player.tscn" id="18_va8xp"]
[ext_resource type="PackedScene" uid="uid://ckqyoykc7huki" path="res://Objects/BlockNormal.tscn" id="19_lp3cr"]
[ext_resource type="PackedScene" uid="uid://bpprpe8id6jbu" path="res://Objects/GateButton.tscn" id="20_afs64"]
[ext_resource type="PackedScene" uid="uid://c7psqelb6tkex" path="res://Objects/Portal.tscn" id="21_va8me"]
[ext_resource type="PackedScene" uid="uid://6sil81eigsp1" path="res://Objects/BlockEntangled.tscn" id="22_gibo3"]
[ext_resource type="PackedScene" uid="uid://bv8fct1eu7vdj" path="res://Objects/Cloner.tscn" id="23_1drfo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsutw"]
texture = ExtResource("6_dgjx0")
texture_region_size = Vector2i(32, 16)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/z_index = 1
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_1 = true
3:0/0 = 0
3:0/0/z_index = -1
3:0/0/y_sort_origin = 1
3:0/0/custom_data_2 = true

[sub_resource type="TileSet" id="TileSet_nb5l8"]
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "wall"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "hole"
custom_data_layer_2/type = 1
sources/0 = SubResource("TileSetAtlasSource_qsutw")

[node name="Level" type="Node2D"]
z_as_relative = false
y_sort_enabled = true

[node name="EffectLayer" parent="." instance=ExtResource("1_di3j1")]

[node name="Background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_wb6i2")
autoplay = true

[node name="ExitHandler" type="Node2D" parent="."]
script = ExtResource("3_7upac")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="LevelControler" type="Node2D" parent="."]
script = ExtResource("4_w7oml")

[node name="Gate" parent="." instance=ExtResource("5_bqmtj")]
position = Vector2(-16, -118)
next_level_path = "res://Levels/Level9.tscn"

[node name="TileMap" type="TileMap" parent="."]
z_as_relative = false
y_sort_enabled = true
texture_filter = 1
tile_set = SubResource("TileSet_nb5l8")
format = 2
layer_0/y_sort_enabled = true
layer_0/y_sort_origin = -16
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-393224, 131072, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 131072, 0, -8, 131072, 0, 65528, 131072, 0, 131064, 131072, 0, 196600, 131072, 0, 262136, 131072, 0, 327672, 131072, 0, 393208, 131072, 0, 458744, 131072, 0, -393223, 0, 0, -327687, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 131072, 0, -7, 131072, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 131072, 0, 327673, 0, 0, 393209, 0, 0, 458745, 0, 0, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 131072, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, -393221, 131072, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 131072, 0, -5, 131072, 0, 65531, 131072, 0, 131067, 131072, 0, 196603, 131072, 0, 262139, 131072, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, -393220, 131072, 0, -327684, 131072, 0, -262148, 131072, 0, -196612, 131072, 0, -131076, 131072, 0, -65540, 131072, 0, -4, 131072, 0, 65532, 131072, 0, 131068, 131072, 0, 196604, 131072, 0, 262140, 131072, 0, 327676, 0, 0, 393212, 131072, 0, 458748, 131072, 0, -393219, 131072, 0, -327683, 131072, 0, -262147, 131072, 0, -196611, 131072, 0, -131075, 131072, 0, -65539, 131072, 0, -3, 131072, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 131072, 0, 458749, 131072, 0, -393218, 131072, 0, -327682, 131072, 0, -262146, 131072, 0, -196610, 131072, 0, -131074, 131072, 0, -65538, 131072, 0, -2, 131072, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 131072, 0, 458750, 131072, 0, -393217, 0, 0, -327681, 131072, 0, -262145, 131072, 0, -196609, 131072, 0, -131073, 131072, 0, -65537, 131072, 0, -1, 131072, 0, 65535, 131072, 0, 131071, 131072, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, -458752, 131072, 0, -393216, 131072, 0, -327680, 131072, 0, -262144, 131072, 0, -196608, 131072, 0, -131072, 131072, 0, -65536, 131072, 0, 0, 131072, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 131072, 0, 393216, 131072, 0, -458751, 131072, 0, -393215, 131072, 0, -327679, 131072, 0, -262143, 131072, 0, -196607, 131072, 0, -131071, 131072, 0, -65535, 131072, 0, 1, 131072, 0, 65537, 0, 0, 131073, 131072, 0, 196609, 0, 0, 262145, 131072, 0, 327681, 131072, 0, 393217, 131072, 0, -458750, 131072, 0, -393214, 131072, 0, -327678, 131072, 0, -262142, 131072, 0, -196606, 131072, 0, -131070, 131072, 0, -65534, 131072, 0, 2, 131072, 0, 65538, 131072, 0, 131074, 131072, 0, 196610, 131072, 0, 262146, 131072, 0, 327682, 131072, 0, 393218, 0, 0, -458749, 131072, 0, -393213, 131072, 0, -327677, 131072, 0, -262141, 131072, 0, -196605, 131072, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 131072, 0, 196611, 131072, 0, 262147, 131072, 0, 327683, 0, 0, 393219, 0, 0, -458748, 131072, 0, -393212, 131072, 0, -327676, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 131072, 0, 4, 131072, 0, 65540, 0, 0, 131076, 131072, 0, 196612, 131072, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, -458747, 131072, 0, -393211, 0, 0, -327675, 0, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 131072, 0, 5, 131072, 0, 65541, 131072, 0, 131077, 131072, 0, 196613, 131072, 0, 262149, 131072, 0, 327685, 0, 0, 393221, 0, 0, -458746, 131072, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 131072, 0, 6, 131072, 0, 65542, 131072, 0, 131078, 131072, 0, 196614, 131072, 0, 262150, 131072, 0, 327686, 131072, 0, 393222, 131072, 0, -458745, 131072, 0, -393209, 131072, 0, -327673, 131072, 0, -262137, 131072, 0, -196601, 131072, 0, -131065, 131072, 0, -65529, 131072, 0, 7, 131072, 0, 65543, 131072, 0, 131079, 131072, 0, 196615, 131072, 0, 262151, 131072, 0, 327687, 131072, 0, 393223, 131072, 0, 524279, 131072, 0, 524280, 131072, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 131072, 0, 524285, 131072, 0, 524286, 131072, 0, 524287, 0, 0, 458752, 131072, 0, 458753, 131072, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 131072, 0, 458759, 131072, 0, 458760, 131072, 0, -524280, 131072, 0, -458744, 131072, 0, -393208, 131072, 0, -327672, 131072, 0, -262136, 131072, 0, -196600, 131072, 0, -131064, 131072, 0, -65528, 131072, 0, 8, 131072, 0, 65544, 131072, 0, 131080, 131072, 0, 196616, 131072, 0, 262152, 131072, 0, 327688, 131072, 0, 393224, 131072, 0, -524281, 131072, 0, -524282, 131072, 0, -524283, 131072, 0, -524284, 131072, 0, -524285, 131072, 0, -524286, 131072, 0, -524287, 131072, 0, -524288, 131072, 0, -458753, 0, 0, -458754, 131072, 0, -458755, 131072, 0, -458756, 131072, 0, -458757, 131072, 0, -458758, 131072, 0, -458759, 131072, 0, -458760, 131072, 0, -458761, 131072, 0, -393225, 131072, 0, -327689, 131072, 0, -262153, 131072, 0, -196617, 131072, 0, -131081, 131072, 0, -65545, 131072, 0, -9, 131072, 0, 65527, 131072, 0, 131063, 131072, 0, 196599, 131072, 0, 262135, 131072, 0, 327671, 131072, 0, 393207, 131072, 0, 458743, 131072, 0, 589815, 131072, 0, 589816, 131072, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 131072, 0, 655356, 131072, 0, 655357, 131072, 0, 655358, 131072, 0, 655359, 0, 0, 589823, 0, 0, 524288, 131072, 0, 524289, 131072, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 131072, 0, 524295, 131072, 0, 524296, 131072, 0, 589832, 131072, 0, 589831, 131072, 0, 589830, 131072, 0, 589829, 131072, 0, 589828, 131072, 0, 589827, 131072, 0, 589826, 131072, 0, 589825, 131072, 0, 589824, 131072, 0, 589822, 131072, 0, 589821, 131072, 0, 655355, 131072, 0, 655352, 131072, 0, 655354, 131072, 0, 655353, 131072, 0, 655351, 131072, 0, -524297, 131072, 0, -589833, 131072, 0, -589832, 131072, 0, -589831, 131072, 0, -589830, 131072, 0, -589829, 131072, 0, -589828, 131072, 0, -589827, 131072, 0, -589826, 131072, 0, -589825, 0, 0, -655360, 131072, 0, -655359, 131072, 0, -655358, 131072, 0, -655357, 131072, 0, -655356, 131072, 0, -589819, 131072, 0, -655355, 131072, 0, -655354, 131072, 0, -655353, 131072, 0, -655352, 131072, 0, -589816, 131072, 0, -589817, 131072, 0, -589818, 131072, 0, -589820, 131072, 0, -589821, 131072, 0, -589822, 131072, 0, -589823, 131072, 0, -589824, 131072, 0, -524289, 0, 0, -524290, 131072, 0, -524291, 131072, 0, -524292, 131072, 0, -524293, 131072, 0, -524294, 131072, 0, -524295, 131072, 0, -524296, 131072, 0, 720886, 131072, 0, 720887, 131072, 0, 720888, 131072, 0, 720889, 131072, 0, 720890, 131072, 0, 720891, 131072, 0, 720892, 131072, 0, 720893, 131072, 0, 720894, 131072, 0, 720895, 131072, 0, 655360, 131072, 0, 655361, 131072, 0, 655362, 131072, 0, 655363, 131072, 0, 655364, 131072, 0, 655365, 131072, 0, 655366, 131072, 0, 655367, 131072, 0, 655368, 131072, 0, 655369, 131072, 0, 589833, 131072, 0, 524297, 131072, 0, 458761, 131072, 0, 393225, 131072, 0, 327689, 131072, 0, 262153, 131072, 0, 196617, 131072, 0, 131081, 131072, 0, 65545, 131072, 0, 9, 131072, 0, -65527, 131072, 0, -131063, 131072, 0, -196599, 131072, 0, -262135, 131072, 0, -327671, 131072, 0, -393207, 131072, 0, -458743, 131072, 0, -524279, 131072, 0, -589815, 131072, 0, -655351, 131072, 0, -720887, 131072, 0, -720888, 131072, 0, -720889, 131072, 0, -720890, 131072, 0, -720891, 131072, 0, -720892, 131072, 0, -720893, 131072, 0, -720894, 131072, 0, -720895, 131072, 0, -720896, 131072, 0, -655361, 131072, 0, -655362, 131072, 0, -655363, 131072, 0, -655364, 131072, 0, -655365, 131072, 0, -655366, 131072, 0, -655367, 131072, 0, -655368, 131072, 0, -655369, 131072, 0, -655370, 131072, 0, -589834, 131072, 0, -524298, 131072, 0, -458762, 131072, 0, -393226, 131072, 0, -327690, 131072, 0, -262154, 131072, 0, -196618, 131072, 0, -131082, 131072, 0, -65546, 131072, 0, -10, 131072, 0, 65526, 131072, 0, 131062, 131072, 0, 196598, 131072, 0, 262134, 131072, 0, 327670, 131072, 0, 393206, 131072, 0, 458742, 131072, 0, 524278, 131072, 0, 589814, 131072, 0, 655350, 131072, 0)

[node name="Visuals" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-1, 1)

[node name="Vignette" type="Sprite2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0.235294)
z_index = 999
z_as_relative = false
position = Vector2(1.00001, -2)
scale = Vector2(4.5, 2.5625)
texture = ExtResource("7_32ac3")

[node name="Walls" type="Node2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-112, -1)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Sprite2D2" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-207, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Sprite2D7" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(81, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(64, 0, 32, 32)

[node name="Sprite2D3" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-159, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D4" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-95, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D5" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-31, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D6" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(33, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D8" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(113, -65)
texture = ExtResource("8_beea0")
region_enabled = true
region_rect = Rect2(224, 0, 32, 32)

[node name="Holes" type="Node2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true

[node name="AnimatedSprite2D" parent="Visuals/Holes" instance=ExtResource("9_wr2e0")]

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Visuals/Holes"]
z_index = -1
z_as_relative = false
texture_filter = 1
position = Vector2(-207, 31)
sprite_frames = ExtResource("10_q48c4")
animation = &"Wiggle"
autoplay = "Wiggle"

[node name="Characters" type="Node2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true

[node name="Goat" parent="Visuals/Characters" node_paths=PackedStringArray("target_node") instance=ExtResource("11_7cpos")]
position = Vector2(113, 38)
target_node = NodePath("../../../Player")
rotation_speed = 0.1

[node name="Player" parent="." instance=ExtResource("18_va8xp")]
position = Vector2(-17, 152)

[node name="BlockNormal" parent="." instance=ExtResource("19_lp3cr")]
position = Vector2(16, 56)

[node name="BlockNormal2" parent="." instance=ExtResource("19_lp3cr")]
position = Vector2(-176, -56)

[node name="BlockNormal3" parent="." instance=ExtResource("19_lp3cr")]
position = Vector2(112, 104)

[node name="GateButton" parent="." instance=ExtResource("20_afs64")]
position = Vector2(-48, 71)

[node name="GateButton2" parent="." instance=ExtResource("20_afs64")]
position = Vector2(16, 71)

[node name="GateButton3" parent="." instance=ExtResource("20_afs64")]
position = Vector2(143, 24)

[node name="PortalAB" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(-17, 40)
target_node = NodePath("../PortalBA")
marker_sprite = NodePath("Sign9")

[node name="Sign9" parent="PortalAB" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
texture = ExtResource("16_be75o")
alpha_factor = 0.7

[node name="PortalBA" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(-17, -104)
target_node = NodePath("../PortalAB")
marker_sprite = NodePath("Sign5")

[node name="Sign5" parent="PortalBA" instance=ExtResource("12_r2xwt")]
position = Vector2(1, -6)
texture = ExtResource("16_be75o")
alpha_factor = 0.7

[node name="PortalCD" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(-80, 24)
target_node = NodePath("../PortalDC")
marker_sprite = NodePath("Sign7")

[node name="Sign7" parent="PortalCD" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
alpha_factor = 0.7

[node name="PortalDC" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(-208, -72)
target_node = NodePath("../PortalCD")
marker_sprite = NodePath("Sign")

[node name="Sign" parent="PortalDC" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
alpha_factor = 0.7

[node name="PortalEF" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(-176, 104)
target_node = NodePath("../PortalFE")
marker_sprite = NodePath("Sign2")

[node name="Sign2" parent="PortalEF" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
texture = ExtResource("13_xyuwl")
alpha_factor = 0.7

[node name="PortalFE" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(-48, 24)
target_node = NodePath("../PortalEF")
marker_sprite = NodePath("Sign8")

[node name="Sign8" parent="PortalFE" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
texture = ExtResource("13_xyuwl")
alpha_factor = 0.7

[node name="PortalGH" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(143, 120)
target_node = NodePath("../PortalHG")
marker_sprite = NodePath("Sign6")

[node name="Sign6" parent="PortalGH" instance=ExtResource("12_r2xwt")]
position = Vector2(1, -8)
texture = ExtResource("17_4djrm")
alpha_factor = 0.7

[node name="PortalHG" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(16, 24)
target_node = NodePath("../PortalGH")
marker_sprite = NodePath("Sign11")

[node name="Sign11" parent="PortalHG" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
texture = ExtResource("17_4djrm")
alpha_factor = 0.7

[node name="PortalIJ" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(49, 24)
target_node = NodePath("../PortalJI")
marker_sprite = NodePath("Sign10")

[node name="Sign10" parent="PortalIJ" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
texture = ExtResource("15_gs6mq")
alpha_factor = 0.7

[node name="PortalJI" parent="." node_paths=PackedStringArray("target_node", "marker_sprite") instance=ExtResource("21_va8me")]
position = Vector2(176, -56)
target_node = NodePath("../PortalIJ")
marker_sprite = NodePath("Sign4")

[node name="Sign4" parent="PortalJI" instance=ExtResource("12_r2xwt")]
position = Vector2(0, -8)
texture = ExtResource("15_gs6mq")
alpha_factor = 0.7

[node name="Cloner" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_1drfo")]
position = Vector2(-112, 72)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner2")

[node name="Cloner2" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_1drfo")]
position = Vector2(49, 56)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner")

[node name="BlockEntangled" parent="." node_paths=PackedStringArray("sibling_node") instance=ExtResource("22_gibo3")]
position = Vector2(144, -55)
sibling_node = NodePath("../BlockEntangled2")

[node name="BlockEntangled2" parent="." node_paths=PackedStringArray("sibling_node") instance=ExtResource("22_gibo3")]
position = Vector2(112, 88)
sibling_node = NodePath("../BlockEntangled")
